apps/base/media-center/cleanuparr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cleanuparr
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - cleanuparr.nathan-fouere.com
  rules:
    - backendRefs:
        - name: cleanuparr
          port: 80
